--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,8 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     networks:
       - app-tier
+    ports:
+      - 6379:6379
     extra_hosts: 
       - "host.docker.internal:172.17.0.1"
 
